--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
-  "name": "aotearoa-institute-wesbite",
+  "name": "reefton_hideaway",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
+    "moment": "^2.27.0",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
+    "react-dates": "^21.8.0",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
