--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0"
   },
+  "homepage": "http://gieoon.github.io/Reefton-Hideaway-V2",
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
